# NuGeometry

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  SimpleBoxes.geom.manual.gdml  compare_apis.py  hit_locations.txt  nd_hall_with_lar_tms_nosand.gdml
.github/workflows/: cmake-multi-platform.yml  cmake.yml
include/geom/: BVH.hh  BoundingBox.hh  Camera.hh  DetectorSim.hh  Element.hh  FourMomentum.hh  FourVector.hh  Geometry.hh  Interface.hh  LineSegment.hh  Material.hh  NuGeometry.hh  NuRay.hh  Parser.hh  PythonInterface.hh  Random.hh  Ray.hh  Shape.hh  TestGen.hh  ThreeVector.hh  Tokenizer.hh  Transform3D.hh  Units.hh  Utilities.hh  Vector2D.hh  Vector3D.hh  Vector4D.hh  Volume.hh  World.hh
include/interactive/: Camera.hh  Input.hh  Renderer.hh
include/lodepng/: lodepng.h
jupyter/: Tutorial.ipynb
jupyter/.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
jupyter/Secondary_API_tests/: hit_locations1.txt  hit_locations2.txt  hit_locations3.txt  hit_locations4.txt
src/geom/: BVH.cc  CMakeLists.txt  CSVPars.cc  DetectorSim.cc  DetectorSim_BACKUP_214344.cc  DetectorSim_BASE_214344.cc  DetectorSim_LOCAL_214344.cc  Element.cc  ExProb.cc  FourVector.cc  Interface.cc  Logging.cc  Material.cc  Parser.cc  PythonInterface.cc  Shape.cc  ThreeVector.cc  Transform3D.cc  Vector2D.cc  Vector3D.cc  Volume.cc  (+5 more)
src/interactive/: CMakeLists.txt  Renderer.cc  ViewerCommon.hh  main_beamviz.cc  main_geodisplay.cc  main_sfml.cc
test/: CMakeLists.txt  bench_segments.cc  test_bvh.cc  test_material.cc  test_parser.cc  test_rotations.cc  test_shape.cc  test_volume.cc
(+1 files in other folders)
